compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__signature_help__help_for_aliased_qualified_call.snap
---
source: compiler-core/src/language_server/tests/signature_help.rs
assertion_line: 305
expression: "\nimport example as wibble\npub fn main() {\n  wibble.example_fn()\n}\n"
---
import example as wibble
pub fn main() {
  wibble.example_fn()
                    ↑
}


----- Signature help -----
wibble.example_fn(Int, String) -> Nil
                  ▔▔▔

No documentation
