compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__signature_help__help_for_aliased_unqualified_call.snap
---
source: compiler-core/src/language_server/tests/signature_help.rs
assertion_line: 273
expression: "\nimport example.{example_fn as wibble}\npub fn main() {\n  wibble()\n}\n"
---
import example.{example_fn as wibble}
pub fn main() {
  wibble()
         ↑
}


----- Signature help -----
wibble(Int, String) -> Nil
       ▔▔▔

No documentation
