compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__signature_help__help_for_calling_local_variable_first_arg.snap
---
source: compiler-core/src/language_server/tests/signature_help.rs
assertion_line: 117
expression: "\npub fn main() {\n  let wibble = fn(a: Int, b: String) { 1.0 }\n  wibble()\n}\n"
---
pub fn main() {
  let wibble = fn(a: Int, b: String) { 1.0 }
  wibble()
         ↑
}


----- Signature help -----
wibble(Int, String) -> Float
       ▔▔▔

Documentation:
MarkupContent(
    MarkupContent {
        kind: Markdown,
        value: "A locally defined variable.",
    },
)
