compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__signature_help__help_for_unqualified_call.snap
---
source: compiler-core/src/language_server/tests/signature_help.rs
assertion_line: 257
expression: "\nimport example.{example_fn}\npub fn main() {\n  example_fn()\n}\n"
---
import example.{example_fn}
pub fn main() {
  example_fn()
             ↑
}


----- Signature help -----
example_fn(Int, String) -> Nil
           ▔▔▔

No documentation
